Bug #40939
mds: map client_caps been inserted by mistake
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Description
SnapRealm.h: SnapRealm::remove_cap()
if map client_caps has not key client, 'client_caps[client]' will insert key client with null value into the map.
Related issues
History
#1 Updated by Patrick Donnelly over 1 year ago
- Subject changed from cephfs: map client_caps been inserted by mistake to mds: map client_caps been inserted by mistake
- Status changed from New to Fix Under Review
- Assignee set to guodong xiao
- Target version set to v15.0.0
- Source set to Community (dev)
- Backport set to nautilus,mimic
- Pull request ID set to 29304
- ceph-qa-suite deleted (
fs) - Component(FS) MDS added
#2 Updated by Patrick Donnelly over 1 year ago
- Status changed from Fix Under Review to Pending Backport
- Start date deleted (
07/25/2019) - Backport changed from nautilus,mimic to nautilus,mimic,luminous
#3 Updated by Patrick Donnelly over 1 year ago
- Copied to Backport #41096: nautilus: mds: map client_caps been inserted by mistake added
#4 Updated by Patrick Donnelly over 1 year ago
- Copied to Backport #41097: mimic: mds: map client_caps been inserted by mistake added
#5 Updated by Patrick Donnelly over 1 year ago
- Copied to Backport #41098: luminous: mds: map client_caps been inserted by mistake added
#6 Updated by Patrick Donnelly over 1 year ago
- Backport changed from nautilus,mimic,luminous to nautilus,mimic
#7 Updated by Nathan Cutler over 1 year ago
- Backport changed from nautilus,mimic to nautilus,mimic,luminous
keep the script happy (alternatively, we could delete #41098)
#8 Updated by Nathan Cutler over 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".