cephfs: avoid map been inserted by mistake

if map client_caps has not key client, client_caps[client] will insert key client with null value into the map.

Fixes: https://tracker.ceph.com/issues/40939
Signed-off-by: XiaoGuoDong2019 <xiaogd@inspur.com>